# EFV-nn

./: .gitignore  CLAUDE.md  README.md  conftest.py  gemini.md  main.py  plan.py  ppc_gnn_v2.ipynb  pyproject.toml  run_ppc_shakespeare.py  run_ppc_toy.py
.claude/: settings.local.json
docs/: comprehensive_ppc_analysis.md  efv_nn_technical_specification.md  implementation_plan.md  optimization_plan.md  ppc_gnn_architectural_review.md  ppc_gnn_v3_code_review.md  project_memory.md  technical_spec.md  v3_code_review_and_plan.md
docs/research/: ppc_gnn_v2.ipynb
research/: ppc_spectral_research.ipynb
src/efv_nn/: __init__.py  classifier.py  deq_solvers.py  diagnostics.py  experiments.py  ppc_core.py  ppc_gnn.py  ppc_sharded.py  training.py  triton_kernels.py  visualization.py
src/efv_nn/research/: spectral_sharded.py
tests/: test_classifier.py  test_ppc_core.py  test_triton_parity.py  v3_validation.py
