[project]
name = "efv-nn"
version = "0.1.0"
description = "Energy-Frequency-Vibration (EFV) Learning Algorithm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "scikit-learn",
    "torch",
    "bitsandbytes==0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
