[project]
name = "efv-nn"
version = "0.2.0"
description = "Energy-Frequency-Vibration (EFV) Learning Algorithm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy<2.0.0",
    "scikit-learn",
    "torch",
]

[project.optional-dependencies]
quantization = ["bitsandbytes==0.42.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
